Deployment/back-end/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: financio-api
  namespace: develop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: financio-api
  template:
    metadata:
      labels:
        app: financio-api
    spec:
      containers:
      - name: financio-api
        image: k3d-fontys:5000/financio-api:v0.1
        ports:
        - containerPort: 80
