Deployment/back-end/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: financio-api-service
  namespace: develop
spec:
  selector:
    app: financio-api
  ports:
  - name: http
    port: 80
    targetPort: 80
