Deployment/back-end/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: financio-api-ingress
  namespace: develop
spec:
  rules:
  - host: api.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: financio-api-service
            port:
              number: 80
